# Glypha

./: .gitignore  CMakeLists.txt  Makefile  README.md  bin-convert.c
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  GL4ESRenderer.cpp  GL4ESRenderer.h  main.cpp
android/app/src/main/java/org/pazolli/glypha/: GlyphaActivity.kt  MainActivity.kt  makeName.kt
android/app/src/main/res/drawable/: glypha_background.xml  glypha_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  instructions_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: glypha_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
game/: GLDataToWave.cpp  GLDataToWave.h  GLFont.cpp  GLFont.h  GLGame.cpp  GLGame.h  GLGameLock.h  GLGameState.h  GLGlobals.h  GLImage.cpp  GLImage.h  GLImage_Android.cpp  GLImage_libpng.cpp  GLMenu.cpp  GLMenu.h  GLPrefs.cpp  GLPrefs.h  GLRect.h  GLRenderer.cpp  GLRenderer.h  GLResources.h  GLSounds.cpp  GLSounds.h  GLSoundsCocoa.mm  GLSoundsQt.cpp  GLSoundsQtImp.h  GLSoundsSDL.cpp  GLSoundsWin32.cpp  GLSounds_Android.cpp  GLUtils.cpp  GLUtils.h
mac/: main.mm
mobbuild/: CMakeLists.txt  mobile.html  mobilegame.html
web/: audio.cpp  audio.h  main.cpp
webbuild/: CMakeLists.txt  game.html  index.html
win/: main.cpp
